--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -82,24 +82,24 @@
                         <tr>
                             <td style="padding: 10px;">
                                 <i class="fas fa-cat" id="animals-icon"></i><br>
-                                <input type="checkbox" id="cat" name="cat" checked>
+                                <input type="checkbox" name="cat" checked>
                                 <label for="scales">Cat</label>
                             </td>
                             <td style="padding: 10px;">
                                 <i class="fas fa-dog" id="animals-icon"></i><br>
-                                <input type="checkbox" id="dog" name="dog">
+                                <input type="checkbox" name="dog">
                                 <label for="scales">Dog</label>
 
                             </td>
                             <td style="padding: 10px;">
                                 <i class="fas fa-frog" id="animals-icon"></i><br>
-                                <input type="checkbox" id="amphibian" name="amphibian" checked>
+                                <input type="checkbox" name="amphibian" checked>
                                 <label for="scales">Amphibian</label>
 
                             </td>
                             <td style="padding: 10px;">
                                 <i class="fas fa-spider" id="animals-icon"></i><br>
-                                <input type="checkbox" id="insect" name="insect">
+                                <input type="checkbox" name="insect">
                                 <label for="scales">Insect</label>
 
                             </td>
@@ -107,25 +107,25 @@
                         <tr>
                             <td style="padding: 10px;">
                                 <i class="fas fa-otter" id="animals-icon"></i><br>
-                                <input type="checkbox" id="rodent" name="rodent">
+                                <input type="checkbox" name="rodent">
                                 <label for="scales">Rodent</label>
 
                             </td>
                             <td style="padding: 10px;">
                                 <i class="fas fa-horse" id="animals-icon"></i><br>
-                                <input type="checkbox" id="horse" name="horse" checked>
+                                <input type="checkbox" name="horse" checked>
                                 <label for="scales">Horse</label>
 
                             </td>
                             <td style="padding: 10px;">
                                 <i class="fas fa-dove" id="animals-icon"></i><br>
-                                <input type="checkbox" id="birds" name="bird">
+                                <input type="checkbox" name="bird">
                                 <label for="scales">Bird</label>
 
                             </td>
                             <td style="padding: 10px;">
                                 <i class="fas fa-fish" id="animals-icon"></i><br>
-                                <input type="checkbox" id="fish" name="fish" checked>
+                                <input type="checkbox" name="fish" checked>
                                 <label for="scales">Fish</label>
 
                             </td>
@@ -133,8 +133,8 @@
                     </table>
                 </div>
 
-                <div class="save-changes">
-                    <a href="petsitter-dashboard.html" class="btn-green">Save changes</a>
+                <div>
+                    <a href="petsitter-dashboard.html" class="save-btn">Save changes</a>
                 </div>
             </div>
         </div>
