--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -3,6 +3,16 @@
 
 <head>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-79F0HHP9F4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-79F0HHP9F4');
+</script>
+	
     <title>Key'Pers, connecting pet lovers</title>
     <meta name="description" content="Key'Pers is an online petsitting platform.">
     <meta charset="utf-8">
