--- a/profilepage.html
+++ b/profilepage.html
@@ -116,7 +116,7 @@
     <ul class="list-inline2">
       <table>
           <tr>
-            <th id="profile-style"><img src="images/profile.jpg" id="profile" alt="Profile picture"></th>
+            <th id="profile-style"><img src="images/profilepicture.jpg" id="profile" alt="Profile picture"></th>
             <th id="name-tab"><h2 id="h2-margin">Name 🐾🐾🐾🐾</h2>
             </th>
           </tr>
