--- a/search.html
+++ b/search.html
@@ -55,8 +55,8 @@
       </select>
 
     <input type="text" name="Location" placeholder="Manchester" class="smallerinput-style">
-    <input type="text" name="Starting date" placeholder="From 20/09" class="smallerinput-style">
-    <input type="text" name="Ending date" placeholder="To 24/09" class="smallerinput-style">
+    <input type="date" name="From 20/09" class="smallerinput-style" value="2020-09-20">
+    <input type="date" name="To 24/09" class="smallerinput-style" value="2020-09-24">
  <!-- Trigger/Open The Modal -->
     <button id="btn-align">+filters</button>
 
@@ -185,7 +185,7 @@
  <img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
+  <h2 class="items-margin"><a href="profilepage.html" style="color:#FD5523;">Name</a><span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
     <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
@@ -201,7 +201,7 @@
    <img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-  <h2 class="items-margin"> <a href="profilepage.html"> Name </a> <span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
+  <h2 class="items-margin"> <a href="profilepage.html" style="color:#FD5523;"> Name </a> <span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
     <h4>City and distance from your location</h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
@@ -217,7 +217,7 @@
    <img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
+  <h2 class="items-margin"><a href="profilepage.html" style="color:#FD5523;">Name</a><span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
     <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
@@ -233,7 +233,7 @@
 <img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
+  <h2 class="items-margin"><a href="profilepage.html" style="color:#FD5523;">Name</a><span class="rating-style"> 🐾🐾🐾🐾🐾 (6)</span></h2>
     <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
