--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -115,6 +115,13 @@
                             <td>
                                 <select id="animals possessed" name="Animals possessed" class="form-style">
                                     <option value="A">Animals possessed</option>
+				     <option value="B">Dog</option>
+                                    <option value="B">Cat</option>
+                                    <option value="C">Rodent</option>
+				    <option value="D">Bird</option>
+                                    <option value="E">Amphibian</option>
+                                    <option value="F">Horse</option>
+				    <option value="G">None</option>
                                 </select>
                             </td>
                         </tr>
