--- a/search.html
+++ b/search.html
@@ -55,8 +55,8 @@
       </select>
 
     <input type="text" name="Location" placeholder="Manchester" class="smallerinput-style">
-    <input type="date" name="From 20/09" class="smallerinput-style" value="2020-09-20">
-    <input type="date" name="To 24/09" class="smallerinput-style" value="2020-09-24">
+    <div><input type="date" name="From 20/09" class="smallerinput-style" value="2020-09-20"></div>
+    <div><input type="date" name="To 24/09" class="smallerinput-style" value="2020-09-24"></div>
  <!-- Trigger/Open The Modal -->
     <button id="btn-align">+filters</button>
 
