--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -69,7 +69,7 @@
 				<table>
 					<tr>
 						<th id="description-tab">
-						<h3 id="description-style>Description</h3></th>
+						<h3 id="description-style">Description</h3></th>
 					
 						<th id="edit-tab1"><a href="petsitter-registration" class="btn-green2">Edit</a></th>		
     	    		</tr>
