--- a/profilepage.html
+++ b/profilepage.html
@@ -159,7 +159,7 @@
       <ul class="list-inline1">
         <table>
           <tr>
-            <th id="description-tab">
+            <th id="description-margin">
             <h8>Pettsiter's description</h8></th>
           </tr>
         </table>
