--- a/profilepage.html
+++ b/profilepage.html
@@ -125,7 +125,7 @@
         <p id="city-style">City and distance from your location</p>
 </div>
 
-<div class="card-picture" >
+<div class="card-picture2" >
         <table>
           <tr>
 
