--- a/profilepage.html
+++ b/profilepage.html
@@ -129,13 +129,13 @@
         <table>
           <tr>
 
-            <th id="cat-tab"><img src="images/chat.jpg" id="cat" alt="Cat picture">
+            <th id="cat-tab"><img src="images/chat.jpg" id="cat3" alt="Cat picture">
             </th>
-            <th id="dog-tab"><img src="images/chien.jpg" id="dog" alt="Dog picture">
+            <th id="dog-tab"><img src="images/chien.jpg" id="dog2" alt="Dog picture">
             </th>
           </tr>
           <tr>
-            <th id="rabbit-tab"><img src="images/lapin.jpg" id="rabbit" alt="Rabbit picture">
+            <th id="rabbit-tab"><img src="images/lapin.jpg" id="rabbit2" alt="Rabbit picture">
             </th>
             <th id="cat2-tab"> <img src="images/chat2.jpg" id="cat2" alt="Cat2 picture">
               <a href="Click">Click for more pictures</a>
