--- a/profilepage.html
+++ b/profilepage.html
@@ -145,7 +145,7 @@
         <table>
         <th id="calendar-tab"> <img src="images/calendar.jpg" id="calendar" alt="Calendar picture">
         </th>
-        <th id="edit-tab"><a href="#" class="btn-green">Confirm reservation</a>
+        <th id="edit-tab"><a href="#" class="btn-green4">Confirm reservation</a>
             </th>
 
         </table>
