--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -76,7 +76,7 @@
         <div class="information-card">
             <div class="green-box">
                 <div class="green-box-title">
-                    <h1>Personnal information</h1>
+                    <h1>Personal information</h1>
                 </div>
                 <div>
                     <table class="table-dropdown">
