--- a/profilepage.html
+++ b/profilepage.html
@@ -173,7 +173,7 @@
       <ul class="list-inline1">
         <table>
           <tr>
-            <th id="conditions-tab">
+            <th id="description-margin">
             <h8>Conditions</h8></th>
           </tr>
         </table>
