--- a/profilepage.html
+++ b/profilepage.html
@@ -187,7 +187,7 @@
       <ul class="list-inline1">
         <table>
           <tr>
-            <th id="Latestreviews-tab"</th>
+            <th id="description-margin"</th>
             <h8>Latest reviews</h8>
           </tr>
           <tr>
