--- a/profilepage.html
+++ b/profilepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html>
 <head>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -16,7 +16,7 @@
    <meta name="description" content="Key'Pers is an online petsitting platform.">
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" type="text/css" href="profilepage.css">
+   <link rel="stylesheet" type="text/css" href="css/style.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 
