--- a/profilepage.html
+++ b/profilepage.html
@@ -25,7 +25,7 @@
  <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
 <a href="#">🔍 Search a pet-sitter</a>
 <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
-<a href="#">🐾 Discover our services</a>
+<a href="index.html">🐾 Discover our services</a>
  <!-- Trigger/Open The Modal -->
     <button id="myBtn">Sign up / Login</button>
 
@@ -197,6 +197,35 @@
   </ul>
 </div>
 </footer>
+  
+    <script type="text/javascript">
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
+
 
 </body>
 </html>
