--- a/formerprofile.html
+++ b/formerprofile.html
@@ -69,7 +69,7 @@
 <a href="#">Help</a>
 </header>
 
-
+<section>
   <nav>
     <div class="card-green3">
       <h1>Prices rates</h1>
@@ -111,7 +111,7 @@
     </div>
   </nav>
 
-
+  <article>
 <div class="card-style" id="card-margin">
     <ul class="list-inline2">
       <table>
@@ -214,7 +214,8 @@
         </table>
       </ul>
 </div>
-
+</article>
+</section>
 
 <footer class="footer-color">
 <div>
